Final fix of overflow.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     margin: 0;
-    overflow: scroll;
 }
 
 .container {
@@ -10,7 +9,6 @@ body {
     grid-template-columns: 1fr 6fr;
     grid-template-rows: auto 1fr;
     height: 100vh;
-    overflow: hidden;
 }
 
 .header {
@@ -121,6 +119,7 @@ body {
     grid-row:  1 / span 2;
     background-color: #475569;
     color: white;
+    overflow: hidden;
 }
 
 .dashboard > div {
@@ -319,4 +318,8 @@ body {
 
 .project-name {
     font-size: 12px;
+}
+
+footer {
+    position: absolute;
 }
